TEZ-4623: JDK17: tests are failed due to timeout with jdk17